nav overlap issue fixed in a better way

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,7 @@
 .swiper-pagination-bullet-active {
   background-color: #fff !important;
 }
+
+body {
+  padding-top: 120px;
+}
